Fixed info buttons within form and made them more readable.

--- a/WebInterface/routes/settings/style.css
+++ b/WebInterface/routes/settings/style.css
@@ -12,12 +12,20 @@ h2 {
     display: inline;
 }
 
-button, input[type="submit"] {
+button:not([class="imageButton"]), input[type="submit"] {
     background-color: #241e56;
     color: #fff;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
+    cursor: pointer;
+}
+
+button.imageButton {
+    padding: 0;
+    margin: 0;
+    border: none;
+    background: none;
     cursor: pointer;
 }
 
@@ -91,13 +99,13 @@ div.overlay-text {
     position: absolute;
     top: 50%;
     left: 50%;
-    font-size: 50px;
+    font-size: 30px;
     color: white;
     transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
 }
 
-input.info {
+img.info {
     width: 20px;
     height: 20px;
     margin: 0;
